# tomato-vibe

./: README.md  package-lock.json  package.json
desktop-widget/: README.md  index.html  package.json
desktop-widget/src/: App.css  App.tsx  index.css  vite-env.d.ts
desktop-widget/src-tauri/: Cargo.toml  tauri.conf.json
desktop-widget/src-tauri/src/: main.rs
desktop-widget/src/components/: TimerWidget.css  TimerWidget.tsx
desktop-widget/src/lib/: supabase.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/auth/auth-code-error/: page.tsx
src/app/auth/callback/: route.ts
src/app/history/: page.tsx
src/app/stats/: page.tsx
src/components/: AuraGuide.tsx  AuthForm.tsx  Heatmap.tsx  HistoryView.tsx  ManualSessionModal.tsx  ModeSelector.tsx  SettingsPanel.tsx  StatsView.tsx  TaskItem.tsx  TaskList.tsx  TimerDisplay.tsx  WebWidget.tsx  WelcomePopup.tsx
src/contexts/: AuthContext.tsx  LanguageContext.tsx  TimerContext.tsx
src/hooks/: index.ts  usePomodoroSettings.ts  usePomodoroTimer.ts  useSedentaryReminder.ts  useWhiteNoise.ts
src/lib/: translations.ts
src/lib/supabase/: broadcast.ts  middleware.ts  server-sessions.ts  sessions.ts  tasks.ts
src/types/: index.ts
supabase/: rpc_stats.sql  schema.sql
